# k8s-operator-kopf

./: CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  kind-config.yaml  plan.md  pyproject.toml
manifests/: crd.yaml  metrics-service.yaml  operator-deployment.yaml  rbac.yaml
manifests-examples/: example-update.yaml  example.yaml
my_operator/: config.py  metrics.py  operator.py
my_operator/handlers/: create.py  delete.py  update.py
scripts/: run_tests.sh  run_tests_kind.sh  wait_for_pods.sh
tests/: conftest.py  test_create.py  test_delete.py  test_metrics.py  test_operator.py  test_rate_limiting.py  test_update.py
