[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "my-operator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "kopf",
    "kubernetes",
    "prometheus-client",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["my_operator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(name)s: %(message)s"
log_date_format = "%H:%M:%S"

[tool.flake8]
max-line-length = 120
